artifactory/artifactory-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.39.4
    component: artifactory
    heritage: Helm
    release: artifactory
spec:
  serviceName: artifactory
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: artifactory
      role: artifactory
      release: artifactory
  template:
    metadata:
      labels:
        app: artifactory
        chart: artifactory-107.39.4
        heritage: Helm
        role: artifactory
        component: artifactory
        release: artifactory
      annotations:
        checksum/database-secrets: fd830412432443f108ca52136a298d4657349c9c48763ea4f35b44d65eb929db
        checksum/binarystore: 8c237cef6b5ecd7d0c3527f7689bc877db532dafb6db8750f79e2ff1f7285bc6
        checksum/systemyaml: dcc7f3df1aff1fc1be232bd95a98bff18a89b08c7396391257fc3b7767ba44df
        checksum/access-config: b4e808c9f6fc0f53a782e789123029c4127e730571a54b9b130e420d13c141a8
        checksum/admin-creds: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
    spec:
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1030
        fsGroup: 1030
      containers:
        - name: artifactory
          image: releases-docker.jfrog.io/jfrog/artifactory-pro:7.39.4
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - NET_RAW
          command:
            - '/bin/bash'
            - '-c'
            - >
              set -e;
              if [ -d /artifactory_extra_conf ] && [ -d /artifactory_bootstrap ]; then
                echo "Copying bootstrap config from /artifactory_extra_conf to /artifactory_bootstrap";
                cp -Lrfv /artifactory_extra_conf/ /artifactory_bootstrap/;
              fi;
              exec /entrypoint-artifactory.sh
          ports:
            - containerPort: 8082
              name: http
            - containerPort: 8081
              name: http-internal
          volumeMounts:
            - name: artifactory-data
              mountPath: "/var/opt/jfrog/artifactory"
            - name: artifactory-backup
              mountPath: "/var/opt/jfrog/artifactory-backup"
            - name: installer-info
              mountPath: "/artifactory_bootstrap/info/installer-info.json"
              subPath: installer-info.json
          startupProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/readiness
            initialDelaySeconds: 10
            failureThreshold: 90
            periodSeconds: 5
            timeoutSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl -s -k --fail --max-time 5 http://localhost:8091/artifactory/api/v1/system/liveness
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10
            successThreshold: 1


      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: artifactory
                    release: artifactory
      volumes:
        - name: binarystore-xml
          secret:
            secretName: artifactory-binarystore
        - name: migration-scripts
          configMap:
            name: artifactory-migration-scripts
        - name: installer-info
          configMap:
            name: artifactory-installer-info
        - name: artifactory-data
          persistentVolumeClaim:
            claimName: artifactory-data-pvc
        - name: artifactory-backup
          persistentVolumeClaim:
            claimName: artifactory-backup-pvc
        - name: systemyaml
          secret:
            secretName: artifactory-systemyaml
        - name: access-config
          secret:
            secretName: artifactory-access-config
  #volumeClaimTemplates:
  #  - metadata:
  #      name: artifactory-volume
  #    spec:
  #      storageClassName: "nfs-storageclass"
  #      accessModes: [ "ReadWriteMany" ]
  #      resources:
  #        requests:
  #          storage: 10G
