artifactory/artifactory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  labels:
    app: artifactory
    chart: artifactory-107.39.4
    component: artifactory
    heritage: Helm
    release: artifactory
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http-router
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http-artifactory
  selector:
    app: artifactory
    component: "artifactory"
    release: artifactory
